--- a/2473014-Vanessa Felicia-Prak1/soal_2.html
+++ b/2473014-Vanessa Felicia-Prak1/soal_2.html
@@ -22,9 +22,9 @@
         Misalnya: C<sub>6</sub>H<sub>12</sub>O<sub>6</sub> : glukosa
     </p>
     <p>
-        <small>Harga Buku Kimia Kelas X Rp 100.000,00 > Rp 75.000,00</small><br>
-        Harga Buku Kimia Kelas XI Rp 100.000,00 > Rp 90.000,00<br>
-        <big>Harga Buku Kimia Kelas XII Rp 100.000,00 > Rp 50.000,00</big>
+        <small>Harga Buku Kimia Kelas X Rp <del>100.000</del>,00 > Rp 75.000,00</small><br>
+        Harga Buku Kimia Kelas XI Rp <del>100.000</del>,00 > Rp 90.000,00<br>
+        <big>Harga Buku Kimia Kelas XII Rp <del>100.000</del>,00 > Rp 50.000,00</big>
     </p> 
 </body>
 </html>
